==> aluxcallejon/ProyectoEC/MSP430/FT800_MSP.c <==
#include "FT800.h"
#include "MSP_general.h"
#include <msp430.h>
#define dword long
#define byte char

unsigned char HAL_SPI_ReadWrite(unsigned char data)
{
    //Fin_Rx=0;
    UCB0TXBUF = data;
    while (UCB0STAT&UCBUSY);
    Buffer_Rx=UCB0RXBUF;

    return Buffer_Rx;
}

void HAL_SPI_CSLow(void)
{
    P2OUT&=~BIT5;                   // Write the value back to the port
}

void HAL_SPI_CSHigh(void)
{
   P2OUT|=BIT5;                 // Write the value back to the port
}

void HAL_SPI_PDlow(void)
{
    P2OUT&=~BIT4;                    // Write the value back to the port
}

void HAL_SPI_PDhigh(void)
{
    P2OUT|=BIT4;                    // Write the value back to the port
}
