==> karvo19/proyecto_micro/ft800_TIVA.c <==
#include <stdbool.h>
#include <stdint.h>
#include "driverlib2.h"
#include "FT800_TIVA.h"
#define dword long
#define byte char
#define LEDOn()  GPIOPinWrite(CLP_D1_PORT, CLP_D1_PIN, CLP_D1_PIN);
#define LEDOff() GPIOPinWrite(CLP_D1_PORT, CLP_D1_PIN, 0)

unsigned char HAL_SPI_ReadWrite(unsigned char data)
{
	uint32_t recibido;
    SSIDataPut(SSI_BASE, data);
    while(SSIBusy(SSI_BASE))
        {
        }

	SSIDataGet(SSI_BASE, &recibido);
	return (char)recibido;
}

void HAL_SPI_CSLow(void)
{
	GPIOPinWrite(CS_PORT, CS_PIN, 0);
}

void HAL_SPI_CSHigh(void)
{
	GPIOPinWrite(CS_PORT, CS_PIN, CS_PIN);
}

void HAL_SPI_PDlow(void)
{
	GPIOPinWrite(PD_PORT, PD_PIN, 0);
}

void HAL_SPI_PDhigh(void)
{
	GPIOPinWrite(PD_PORT, PD_PIN, PD_PIN);
}
